@@ -47,11 +47,9 @@ class dstat_plugin(dstat):
         return ret
 
     def extract(self):
-        global update
         for veid in self.vars:
             self.set2['total'] = {}
             for line in dopen('/proc/bc/%s/ioacct' % veid).readlines():
-#            for line in dopen('ioacct.%d' % (update % 3)).readlines():
                 l = line.split()
                 if len(l) != 2: continue
                 if l[0] not in self.nick: continue
@@ -60,8 +58,10 @@ class dstat_plugin(dstat):
                 self.set2['total'][index] = self.set2['total'][index] + long(l[1])
 #            print veid, self.val[veid], self.set2[veid][0], self.set2[veid][1]
 #            print veid, self.val[veid], self.set1[veid][0], self.set1[veid][1]
+
             for i in range(len(self.nick)):
                 self.val[veid][i] = (self.set2[veid][i] - self.set1[veid][i]) / elapsed
+
         if step == op.delay:
             self.set1.update(self.set2)
 
