@@ -8,8 +8,9 @@
 - Introduced cmd_readlines() to read from command output
 - Introduced cmd_splitlines() to split lines read from command output
 - Implement best effort /proc integer overflow handling in dstat_net (Ross Brattain)
-- Added external dstat_dstat_mem plugin to show dstat's memory usage
 - Added external dstat_dstat_cpu plugin to show dstat's cpu usage
+- Added external dstat_dstat_ctxt plugin to show dstat's context switches
+- Added external dstat_dstat_mem plugin to show dstat's memory usage
 - Added external dstat_top_bio_adv plugin to show advanced top I/O usage
 - Added external dstat_top_cpu_adv plugin to show advanced top cpu usage
 - Added external dstat_top_io_adv plugin to show advanced top block I/O usage
